syntax = "proto3";
option go_package = "github.com/chamzzzzzz/json-int64-diff/main";

message JSONInt64Proto {
    int64 int64_a = 1;
    int64 int64_b = 2;
}
